# q_and_a_practise1

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.windsurf/rules/: specify-rules.md
docs/: architecture.md  quality_analysis.md  user_guide.md
scripts/: deploy.sh  md_to_pdf.py  run_tests.sh  setup_env.sh
specs/001-qa-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-qa-app/checklists/: requirements.md
specs/001-qa-app/contracts/: api.yaml
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  difficulties.py  questions.py  scores.py  sessions.py  topics.py
src/cli/: __init__.py  commands.py  main.py
src/main/reources/: question-bank.csv
src/main/resources/: question-bank.csv
src/models/: __init__.py  base_question.py  encapsulated_question.py  question.py  question_bank.py  question_review.py  score.py  session.py
src/services/: __init__.py  csv_parser.py  di_setup.py  interfaces.py  question_repository.py  question_service.py  score_service.py  session_service.py
src/utils/: __init__.py  algorithms.py  config.py  container.py  exceptions.py  logging_config.py
src/web/: main.py
src/web/templates/: 404.html  500.html  about.html  base.html  error.html  index.html  question.html  quiz.html  results.html
tests/: __init__.py  conftest.py
tests/contract/: test_answers.py  test_difficulties.py  test_questions.py  test_scores.py  test_session_completion.py  test_topics.py
tests/integration/: test_full_session.py  test_question_flow.py  test_question_review_flow.py  test_session_creation.py
tests/quality/: __init__.py  test_clean_code.py  test_e2e_user_journeys.py  test_integration_api_cli.py  test_modular_architecture.py  test_performance.py  test_programming_concepts.py  test_security.py  test_solid_compliance.py
tests/unit/test_cli/: test_cli_commands.py  test_cli_main.py
tests/unit/test_models/: test_base_question.py  test_encapsulated_question.py  test_question.py  test_question_bank.py  test_question_review.py  test_score.py  test_session.py
tests/unit/test_services/: test_csv_parser.py  test_question_repository.py  test_question_service.py  test_score_service.py  (+1 more)
(+4 files in other folders)
